--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>カリカリのホーム</title>
-  <style>
-    body { font-family: Arial; background: #eef; text-align: center; padding: 40px; }
-    nav a { margin: 0 10px; color: blue; text-decoration: none; font-weight: bold; }
-  </style>
+  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>カリカリのポートフォリオ</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
