--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 
   <h1>カリカリのポートフォリオ</h1>
+  <img src="profile.jpg" alt="プロフィール画像" class="profile-img" />
   <nav>
     <a href="index.html">ホーム</a> |
     <a href="skills.html">資格</a> |
