--- a/hobbies.html
+++ b/hobbies.html
@@ -15,7 +15,37 @@
     <a href="hobbies.html">趣味</a>
   </nav>
 
-  <p>自然や景色を楽しむサイクリングが好きです。</p>
+<section id="hobbies" class="hobby-section">
+  <h2>趣味</h2>
+
+  <!-- サイクリングのセクション -->
+  <div class="hobby">
+    <img src="cycling.jpg" alt="サイクリング中の写真">
+    <div class="hobby-text">
+      <h3>サイクリング</h3>
+      <p>
+        ロードバイクではなく、あえてママチャリで長距離を走っています。<br>
+        中学時代からの友人と2人で、東大阪市を出発し、明石海峡大橋、京都、琵琶湖などへ往復100〜150kmのサイクリングに挑戦することも。<br>
+        スピードよりも、景色や会話を楽しむ“のんびり旅”がモットーです。
+      </p>
+    </div>
+  </div>
+
+  <!-- 健康管理のセクション -->
+  <div class="hobby">
+    <img src="health.jpg" alt="筋トレや食事管理の様子">
+    <div class="hobby-text">
+      <h3>健康管理</h3>
+      <p>
+        健康維持を意識し、最近チョコザップに入会して筋トレを始めました。<br>
+        痩せ型体型のため、現在は体重増加＆筋肉量アップを目指して日々努力中です。<br>
+        食事はすべて自炊で、栄養バランスを意識。特に肉と野菜を使った「野菜炒め」をよく作っています。<br>
+        また、睡眠時間を毎日固定するなど、生活リズムも整えるようにしています。
+      </p>
+    </div>
+  </div>
+</section>
+
 
 </body>
 </html>
