--- a/index.html
+++ b/index.html
@@ -77,16 +77,19 @@
 
     <!-- スキルカード -->
     <div class="card">
-      <h3>スキル</h3>
-      <p>HTML / CSS / JavaScript</p>
+  <!-- 丸いアイコン画像 -->
+  <img src="skill-icon.jpg" alt="スキルアイコン" class="icon-img">
+  <h3>スキル</h3>
+  <p>HTML / CSS / JavaScript</p>
       <p>宅地建物取引士・簿記2級</p>
       <a href="skills.html" class="btn">スキル詳細</a>
     </div>
 
     <!-- 趣味カード -->
     <div class="card">
-      <h3>趣味</h3>
-      <p>ママチャリ長距離サイクリング</p>
+  <img src="hobby-icon.jpg" alt="趣味アイコン" class="icon-img">
+  <h3>趣味</h3>
+  <p>ママチャリで長距離サイクリング</p>
       <p>筋トレ・自炊・健康管理</p>
       <a href="hobbies.html" class="btn">趣味を見る</a>
     </div>
