--- a/hobbies.html
+++ b/hobbies.html
@@ -45,7 +45,33 @@
     </div>
   </div>
 </section>
-
+ <li><strong>旅行</strong><br>
+        大学時代はユースホステルクラブに所属し、格安旅行を楽しんでいました。<br>
+        Go To Travelキャンペーンも活用し、多くの場所へ訪れました。
+      </li>
+      <li><strong>写真</strong><br>
+        大学の写真部に所属。主にiPhoneで人を撮影しています。カメラは所持していませんが、撮影を楽しんでいます。
+      </li>
+      <li><strong>美容</strong><br>
+        年齢より若く見られることを意識し、脱毛、日焼け止め、化粧水、ヘアアイロンなど女性向けのケアも積極的に取り入れています。
+      </li>
+      <li><strong>服</strong><br>
+        安さ重視ではなく、ある程度良いものを購入し、長く大切に着るスタイルを好んでいます。
+      </li>
+      <li><strong>廃墟やディープスポット巡り</strong><br>
+        特に西成区など、一風変わった場所を訪れるのが好きです。歴史や雰囲気を感じながら散策しています。
+      </li>
+      <li><strong>節約</strong><br>
+        一人暮らしですが毎日自炊を心がけています。カップラーメンなどはほとんど食べず、野菜炒めを中心とした健康的な食事をしています。<br>
+        スマホは格安SIMを利用し、2年後返却の1円スマホを活用しています。
+      </li>
+      <li><strong>家電好き</strong><br>
+        長く使える良質な家電にお金をかけるのが好きです。<br>
+        例えばリファのヘアアイロン、プラズマクラスター空気清浄機、65インチのテレビなど。<br>
+        現在はリファのシャワーヘッドとドラム式洗濯乾燥機の購入を検討中です。
+      </li>
+    </ul>
+  </section>
 
 </body>
 </html>
