--- a/skills.html
+++ b/skills.html
@@ -15,11 +15,24 @@
     <a href="hobbies.html">趣味</a>
   </nav>
 
-  <ul style="list-style: none;">
-    <li>・宅地建物取引士（宅建）</li>
-    <li>・日商簿記2級</li>
-    <li>・空手初段</li>
-  </ul>
+  <!-- スキルセクション -->
+  <section id="skills">
+    <h2>スキル</h2>
+    <ul>
+      <li><strong>2021年</strong><br>
+        大学2年生の時に宅地建物取引士（宅建）の試験に合格。<br>
+        コロナ禍で時間を有効活用し、資格取得に挑戦しました。
+      </li>
+      <li><strong>2025年</strong><br>
+        日商簿記2級を取得。<br>
+        現職の商工会議所で資格が有利になるため取得を目指しました。
+      </li>
+      <li>
+        現在は<strong>WEBエンジニア</strong>を目指して勉強中です。<br>
+        今後のキャリア形成に向けてプログラミングや関連スキルを習得しています。
+      </li>
+    </ul>
+  </section>
 
 </body>
 </html>
